[package]
name = "microbit"
version = "0.1.0"
authors = ["Michael E. Craggs <m.e.craggs@gmail.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm0 = { path = "../../arch/cortex-m0" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
nrf51 = { path = "../../chips/nrf51" }
nrf5x = { path = "../../chips/nrf5x" }
